# kde-easy-scan

./: CMakeLists.txt  INSTALL  README  README.1st  README.md
src/: CMakeLists.txt  Messages.sh  kEasySkan.cpp  kEasySkan.h  main.cpp  org.kde.kEasySkan.appdata.xml  org.kde.kEasySkan.desktop  settings.ui  version.h.cmake
src/help/: index.html
src/icons/: .directory
